# discrete-diffusion

./: .gitignore  .pre-commit-config.yaml  README.md  commands.txt  env.yaml  exclude_rsync.txt  init_wnadb.ipynb  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
0.0/: 404.html  index.html
0.0/search/: search_index.json
conf/: default.yaml  test.yaml  test_generation.yaml
conf/augmentation_pipeline/: default.yaml
conf/connectivity_generation/: default.yaml
conf/connectivity_generation/nn/: test_gnn.yaml
conf/connectivity_generation/train/: default.yaml
conf/nn/: classifier.yaml  default.yaml  gae.yaml  graph.yaml  graph_discrete_diffusion.yaml  latent_continuous_diffusion.yaml  latent_diffusion.yaml  latent_diffusion_pointnet.yaml  synthetic_graph.yaml  synthetic_graph_auto.yaml  synthetic_graph_contrastive.yaml  synthetic_graph_gae.yaml  synthetic_graph_spectral.yaml  synthetic_graph_stochastic_auto.yaml  synthetic_graph_vgae.yaml  test_diffusion.yaml  test_gnn.yaml  vgae.yaml
conf/nn/data/: TUDatasets.yaml  synthetic.yaml
conf/nn/gnn_embedder/: GATConv.yaml  GINConv.yaml
conf/nn/graph_generator/: balanced_tree.yaml  (+4 more)
conf/train/: default.yaml
data/: .gitignore
docs/: index.md
notebooks/: check_permutation.ipynb  data.ipynb  experiments.ipynb  graph_batching.ipynb  inspect_latent_space.ipynb
src/augmentation_pipeline/: run.py
src/discrete_diffusion/: io_utils.py  pl_problem.py  run.py  test.py  test_generation.py  utils.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
(+67 files in other folders)
